--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "commonjs",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server.ts"
   },
   "dependencies": {
+    "@apollo/server": "^5.2.0",
     "@graphql-tools/merge": "^9.1.5",
+    "@graphql-tools/schema": "^10.0.29",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.1",
     "class-validator": "^0.14.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "graphql": "^16.12.0",
-    "graphql-ws": "^5.11.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.16.2",
     "graphql-yoga": "^5.16.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.0",
-    "ws": "^8.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.7",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.20",
+    "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.19.25",
     "@types/ws": "^8.5.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.0"
+    "typescript": "^5.9.3"
   }
 }
